tests/bad/testfile-duplicate-args.go
package main

func test(x int, x int) {}

func main() {}
